src/objects/ShopUser__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Login__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Login</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>ShopUser</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ShopUser Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ShopUsers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>